# RDC2018

./: CMakeLists.txt  README.md  manifest.xml  package.xml
launch/: cartesian_server.launch  cartesio.launch  cartesioj.launch  joint_postural.launch  robot_slider.launch
robot_srdf/: coman.srdf
robot_urdf/: coman.urdf
rviz/: cartesio.rviz
stacks/: robot_simple_stack.yaml
